k8s/deployments/services/emails/emails-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emails
  labels:
    app: emails
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emails
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: emails
    spec:
      containers:
        - name: emails
          imagePullPolicy: IfNotPresent
          image: ${IMAGE}
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
          readinessProbe:
            httpGet:
              path: /utils/health
              port: 8000
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /utils/health
              port: 8000
            periodSeconds: 10
            failureThreshold: 3
      restartPolicy: Always
