k8s/deployments/services/emails/emails-scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emails-scheduler
  labels:
    app: emails-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emails-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: emails-scheduler
    spec:
      containers:
        - name: emails-scheduler
          imagePullPolicy: IfNotPresent
          image: ${IMAGE}
          command:
            [
              "taskiq",
              "scheduler",
              "src.tasks:scheduler",
              "--log-level",
              "INFO",
              "--skip-first-run",
            ]
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
